# timber

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Axe.hpp  Bee.hpp  Branches.hpp  Clouds.hpp  GameUI.hpp  Log.hpp  Player.hpp  Rip.hpp  Side.hpp  Timebar.hpp  Tree.hpp
src/: Axe.cpp  Bee.cpp  Branches.cpp  Clouds.cpp  GameUI.cpp  Log.cpp  Player.cpp  Rip.cpp  Timebar.cpp  Tree.cpp  main.cpp
